hid hero image on mobile & fixed college affil dropdown

--- a/src/scss/components/application/forms/_demographics.scss
+++ b/src/scss/components/application/forms/_demographics.scss
@@ -76,6 +76,11 @@
   }
   &__college-affil {
     float: right;
+    @media screen and (max-width: 996px) {
+      float: left;
+      padding-top: 1em;
+      padding-bottom: 0.3em;
+    }
   }
   &__currSchool {
     float: left;
