--- a/src/scss/components/landing/background/backdrop/hero/_hero.scss
+++ b/src/scss/components/landing/background/backdrop/hero/_hero.scss
@@ -48,8 +48,7 @@
       max-width: 50vw;
     }
     @include respond(phone) {
-      max-width: 50vw;
-      top: 5vh;
+      display: none;
     }
   }
 
